--- a/config.gradle
+++ b/config.gradle
@@ -16,6 +16,8 @@ ext {
 
     depend = [
             "appcompat"              : "androidx.appcompat:appcompat:1.1.0-alpha03",
+            "support-v4"             : 'com.android.support:support-v4:28.0.0',
+            "multidex"               : 'com.android.support:multidex:1.0.3',
             "core-ktx"               : "androidx.core:core-ktx:1.1.0-alpha05",
             "material"               : "com.google.android.material:material:1.1.0-alpha05",
             "constraintlayout"       : "androidx.constraintlayout:constraintlayout:1.1.3",
@@ -23,12 +25,13 @@ ext {
             "lifecycle-viewmodel-ktx": "androidx.lifecycle:lifecycle-viewmodel-ktx:${dependVersion.lifecycle}",
             "navigation-fragment-ktx": "androidx.navigation:navigation-fragment-ktx:${dependVersion.navigation}",
             "navigation-ui-ktx"      : "androidx.navigation:navigation-ui-ktx:${dependVersion.navigation}",
+            "paging_ktx"             : "androidx.paging:paging-runtime-ktx:2.1.0-rc01",
             "recyclerview"           : "androidx.recyclerview:recyclerview:1.1.0-alpha02",
             "glide"                  : "com.github.bumptech.glide:glide:${dependVersion.glide}",
-            "retrofit"               : "com.squareup.retrofit2:retrofit:${dependVersion.navigation}",
-            "adapter-rxjava"         : "com.squareup.retrofit2:adapter-rxjava:${dependVersion.navigation}",
-            "converter-gson"         : "com.squareup.retrofit2:converter-gson:${dependVersion.navigation}",
-            "converter-scalars"      : "com.squareup.retrofit2:converter-scalars:${dependVersion.navigation}",
+            "retrofit"               : "com.squareup.retrofit2:retrofit:${dependVersion.retrofit}",
+            "adapter-rxjava"         : "com.squareup.retrofit2:adapter-rxjava:${dependVersion.retrofit}",
+            "converter-gson"         : "com.squareup.retrofit2:converter-gson:${dependVersion.retrofit}",
+            "converter-scalars"      : "com.squareup.retrofit2:converter-scalars:${dependVersion.retrofit}",
             "okhttp"                 : "com.squareup.okhttp3:okhttp:3.4.2",
             "rxjava"                 : "io.reactivex:rxjava:1.2.2",
             "rxandroid"              : "io.reactivex:rxandroid:1.2.1",
