--- a/config.gradle
+++ b/config.gradle
@@ -8,6 +8,7 @@ ext {
     ]
 
     dependVersion = [
+            support   : "28.0.0",
             lifecycle : "2.1.0-alpha02",
             navigation: "2.0.0",
             retrofit  : "2.1.0",
@@ -16,7 +17,8 @@ ext {
 
     depend = [
             "appcompat"              : "androidx.appcompat:appcompat:1.1.0-alpha03",
-            "support-v4"             : 'com.android.support:support-v4:28.0.0',
+            "support-v4"             : "com.android.support:support-v4:${dependVersion.support}",
+            "appcompatv7"            : "com.android.support:appcompat-v7:${dependVersion.support}",
             "multidex"               : 'com.android.support:multidex:1.0.3',
             "core-ktx"               : "androidx.core:core-ktx:1.1.0-alpha05",
             "material"               : "com.google.android.material:material:1.1.0-alpha05",
