--- a/config.gradle
+++ b/config.gradle
@@ -11,7 +11,7 @@ ext {
             support   : "28.0.0",
             lifecycle : "2.1.0-alpha02",
             navigation: "2.0.0",
-            retrofit  : "2.1.0",
+            retrofit  : "2.4.0",
             glide     : "4.8.0"
     ]
 
@@ -19,7 +19,8 @@ ext {
             "appcompat"              : "androidx.appcompat:appcompat:1.1.0-alpha03",
             "support-v4"             : "com.android.support:support-v4:${dependVersion.support}",
             "appcompatv7"            : "com.android.support:appcompat-v7:${dependVersion.support}",
-            "multidex"               : 'com.android.support:multidex:1.0.3',
+            "design"                 : "com.android.support:design:${dependVersion.support}",
+            "multidex"               : "com.android.support:multidex:1.0.3",
             "core-ktx"               : "androidx.core:core-ktx:1.1.0-alpha05",
             "material"               : "com.google.android.material:material:1.1.0-alpha05",
             "constraintlayout"       : "androidx.constraintlayout:constraintlayout:1.1.3",
@@ -31,12 +32,12 @@ ext {
             "recyclerview"           : "androidx.recyclerview:recyclerview:1.1.0-alpha02",
             "glide"                  : "com.github.bumptech.glide:glide:${dependVersion.glide}",
             "retrofit"               : "com.squareup.retrofit2:retrofit:${dependVersion.retrofit}",
-            "adapter-rxjava"         : "com.squareup.retrofit2:adapter-rxjava:${dependVersion.retrofit}",
+            "adapter-rxjava"         : "com.squareup.retrofit2:adapter-rxjava2:${dependVersion.retrofit}",
             "converter-gson"         : "com.squareup.retrofit2:converter-gson:${dependVersion.retrofit}",
             "converter-scalars"      : "com.squareup.retrofit2:converter-scalars:${dependVersion.retrofit}",
             "okhttp"                 : "com.squareup.okhttp3:okhttp:3.4.2",
-            "rxjava"                 : "io.reactivex:rxjava:1.2.2",
-            "rxandroid"              : "io.reactivex:rxandroid:1.2.1",
+            "rxjava"                 : "io.reactivex.rxjava2:rxjava:2.2.8",
+            "rxandroid"              : "io.reactivex.rxjava2:rxandroid:2.1.1",
             "logger"                 : "com.orhanobut:logger:1.15",
     ]
 
