--- a/config.gradle
+++ b/config.gradle
@@ -39,6 +39,7 @@ ext {
             "rxjava"                 : "io.reactivex.rxjava2:rxjava:2.2.8",
             "rxandroid"              : "io.reactivex.rxjava2:rxandroid:2.1.1",
             "logger"                 : "com.orhanobut:logger:1.15",
+            "agentweb"               : "com.just.agentweb:agentweb:4.0.3-alpha@aar",
     ]
 
     libraries = depend.values()
