完成知识体系展示

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,8 @@
 
         <activity android:name=".ui.activity.WebActivity"/>
 
+        <activity android:name=".ui.activity.KnowledgeActivity"/>
+
     </application>
 
 </manifest>
