--- a/config.gradle
+++ b/config.gradle
@@ -40,6 +40,7 @@ ext {
             "rxandroid"              : "io.reactivex.rxjava2:rxandroid:2.1.1",
             "logger"                 : "com.orhanobut:logger:1.15",
             "agentweb"               : "com.just.agentweb:agentweb:4.0.3-alpha@aar",
+            "flowlayout"             : "com.hyman:flowlayout-lib:1.1.2",
     ]
 
     libraries = depend.values()
