--- a/config.gradle
+++ b/config.gradle
@@ -42,6 +42,7 @@ ext {
             "agentweb"               : "com.just.agentweb:agentweb:4.0.3-alpha@aar",
             "flowlayout"             : "com.hyman:flowlayout-lib:1.1.2",
             "banner"                 : 'cn.bingoogolapple:bga-banner:2.2.6@aar',
+            "zbar"                   : "me.dm7.barcodescanner:zbar:1.9",
     ]
 
     libraries = depend.values()
